crates/swc_ecma_parser/tests/test262-error-references/fail/7fc173197c3cc75d.js.stderr
error: Unexpected token `!`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/7fc173197c3cc75d.js:1:16
  |
1 | (class extends !a {})
  |                ^

